feat : add keywords to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,28 @@
     "name": "casing-convention",
     "displayName": "casing convention",
     "description": "Transform your text with the power of casing convention.",
+    "keywords": [
+        "help",
+        "camelCase",
+        "snake_case",
+        "Capital Case",
+        "CONSTANT_CASE",
+        "dot.case",
+        "Header-Case",
+        "no case",
+        "param-case",
+        "PascalCase",
+        "path/case",
+        "Sentence case",
+        "Title Case",
+        "lower case",
+        "lOWER cASE fIRST",
+        "UPPER CASE",
+        "Upper Case First",
+        "spOngE cASe",
+        "SWap CacE"
+    ],
+    "author": "otnansirk",
     "version": "0.0.1",
     "icon": "assets/logo.png",
     "galleryBanner": {
