--- a/package.json
+++ b/package.json
@@ -50,18 +50,15 @@
         "commands": [
             {
                 "command": "casing-convention.help",
-                "title": "casing: help",
-                "shortTitle": "help"
+                "title": "casing: Help"
             },
             {
                 "command": "casing-convention.camelCase",
-                "title": "casing: camelCase",
-                "shortTitle": "camelCase"
+                "title": "casing: camelCase"
             },
             {
                 "command": "casing-convention.snakeCase",
-                "title": "casing: snake_case",
-                "shortTitle": "snake_case"
+                "title": "casing: snake_case"
             },
             {
                 "command": "casing-convention.capitalCase",
@@ -146,8 +143,7 @@
             "casing-convention.menus": [
                 {
                     "command": "casing-convention.help",
-                    "group": "1_casing-convention.group@01",
-                    "title": "Help"
+                    "group": "1_casing-convention.group@01"
                 },
                 {
                     "command": "casing-convention.camelCase",
@@ -244,7 +240,8 @@
         "watch": "tsc -watch -p ./",
         "pretest": "yarn run compile && yarn run lint",
         "lint": "eslint src --ext ts",
-        "test": "node ./out/test/runTest.js"
+        "test": "mocha -r ts-node/register",
+        "coverage": "nyc -r lcov -e .ts -x \"*.spec.ts\" npm run test"
     },
     "devDependencies": {
         "@types/glob": "^8.1.0",
@@ -257,6 +254,8 @@
         "eslint": "^8.41.0",
         "glob": "^8.1.0",
         "mocha": "^10.2.0",
+        "nyc": "^15.1.0",
+        "ts-node": "^10.9.1",
         "typescript": "^5.1.3"
     },
     "dependencies": {
