chore: :wrench: add json-summary to reporter nycrc

--- a/.nycrc.json
+++ b/.nycrc.json
@@ -13,7 +13,8 @@
     "reporter": [
         "html",
         "text",
-        "text-summary"
+        "text-summary",
+        "json-summary"
     ],
     "report-dir": "coverage"
 }
