--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -36,6 +36,4 @@ jobs:
           git config --local user.name "Codecov"
           git add README.md
           git commit -m "Update codecov badge"
-          git push
-
-
+          git push origin HEAD:$(git branch --show-current)
