--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -31,9 +31,10 @@ jobs:
         run: yarn cov
 
       - name: Commit and Push Changes
+        if: ${{ github.ref == 'refs/heads/master' && github.event_name == 'push' }}
         run: |
           git config --local user.email "codecov.actions@github.com"
           git config --local user.name "Codecov"
           git add README.md
           git commit -m "Update codecov badge"
-          git push origin HEAD:$(git branch --show-current)
+          git push origin master
