--- a/package.json
+++ b/package.json
@@ -1,7 +1,64 @@
 {
     "name": "casing-convention",
-    "displayName": "casing convention",
+    "displayName": "Casing Convention",
     "description": "Transform your text with the power of casing convention.",
+    "publisher": "otnansirk",
+    "version": "1.0.0",
+    "icon": "./assets/logo.png",
+    "license": "MIT",
+    "engines": {
+        "vscode": "^1.79.0"
+    },
+    "activationEvents": [],
+    "main": "./out/extension.js",
+    "scripts": {
+        "vscode:prepublish": "yarn run compile",
+        "compile": "tsc -p ./",
+        "watch": "tsc -watch -p ./",
+        "pretest": "yarn run compile && yarn run lint",
+        "lint": "eslint src --ext ts",
+        "test": "mocha -r ts-node/register",
+        "cov": "nyc yarn run test && istanbul-badges-readme"
+    },
+    "devDependencies": {
+        "@istanbuljs/nyc-config-typescript": "^1.0.2",
+        "@types/glob": "^8.1.0",
+        "@types/mocha": "^10.0.1",
+        "@types/node": "20.2.5",
+        "@types/vscode": "^1.79.0",
+        "@typescript-eslint/eslint-plugin": "^5.59.8",
+        "@typescript-eslint/parser": "^5.59.8",
+        "@vscode/test-electron": "^2.3.2",
+        "eslint": "^8.41.0",
+        "glob": "^8.1.0",
+        "istanbul-badges-readme": "^1.8.5",
+        "mocha": "^10.2.0",
+        "nyc": "^15.1.0",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.1.3"
+    },
+    "dependencies": {
+        "change-case": "^4.1.2",
+        "lower-case": "^2.0.2",
+        "sponge-case": "^1.0.1",
+        "swap-case": "^2.0.2",
+        "upper-case": "^2.0.2"
+    },
+    "galleryBanner": {
+        "color": "#042e00",
+        "theme": "dark"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/otnansirk/vscode-casing-convention.git"
+    },
+    "bugs": {
+        "url": "https://github.com/otnansirk/vscode-casing-convention/issues"
+    },
+    "categories": [
+        "Formatters",
+        "Other"
+    ],
     "keywords": [
         "help",
         "camelCase",
@@ -21,31 +78,10 @@
         "UPPER CASE",
         "Upper Case First",
         "spOngE cASe",
-        "SWap CacE"
+        "SWap CacE",
+        "kebab-case",
+        "SCREAM-KEBAB-CASE"
     ],
-    "publisher": "otnansirk",
-    "version": "1.0.0",
-    "icon": "/assets/logo.png",
-    "galleryBanner": {
-        "color": "#042e00",
-        "theme": "dark"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/otnansirk/vscode-casing-convention.git"
-    },
-    "bugs": {
-        "url": "https://github.com/otnansirk/vscode-casing-convention/issues"
-    },
-    "license": "MIT",
-    "engines": {
-        "vscode": "^1.79.0"
-    },
-    "categories": [
-        "Other"
-    ],
-    "activationEvents": [],
-    "main": "./out/extension.js",
     "contributes": {
         "commands": [
             {
@@ -232,39 +268,7 @@
                 "id": "casing-convention.menus",
                 "label": "Casing convention"
             }
-        ]
-    },
-    "scripts": {
-        "vscode:prepublish": "yarn run compile",
-        "compile": "tsc -p ./",
-        "watch": "tsc -watch -p ./",
-        "pretest": "yarn run compile && yarn run lint",
-        "lint": "eslint src --ext ts",
-        "test": "mocha -r ts-node/register",
-        "cov": "nyc yarn run test && istanbul-badges-readme"
-    },
-    "devDependencies": {
-        "@istanbuljs/nyc-config-typescript": "^1.0.2",
-        "@types/glob": "^8.1.0",
-        "@types/mocha": "^10.0.1",
-        "@types/node": "20.2.5",
-        "@types/vscode": "^1.79.0",
-        "@typescript-eslint/eslint-plugin": "^5.59.8",
-        "@typescript-eslint/parser": "^5.59.8",
-        "@vscode/test-electron": "^2.3.2",
-        "eslint": "^8.41.0",
-        "glob": "^8.1.0",
-        "istanbul-badges-readme": "^1.8.5",
-        "mocha": "^10.2.0",
-        "nyc": "^15.1.0",
-        "ts-node": "^10.9.1",
-        "typescript": "^5.1.3"
-    },
-    "dependencies": {
-        "change-case": "^4.1.2",
-        "lower-case": "^2.0.2",
-        "sponge-case": "^1.0.1",
-        "swap-case": "^2.0.2",
-        "upper-case": "^2.0.2"
+        ],
+        "changelog": "./CHANGELOG.md"
     }
 }
