--- a/package.json
+++ b/package.json
@@ -167,6 +167,14 @@
             {
                 "command": "casing-convention.screamKebabCase",
                 "title": "casing: SCREAM-KEBAB-CASE"
+            },
+            {
+                "command": "casing-convention.json2ArrayPHP",
+                "title": "casing: json to array PHP"
+            },
+            {
+                "command": "casing-convention.arrayPHP2Json",
+                "title": "casing: array PHP to json"
             }
         ],
         "menus": {
