--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Transform your text with the power of casing convention.",
     "publisher": "otnansirk",
     "version": "1.5.0",
-    "icon": "./assets/logo.png",
+    "icon": "assets/logo.png",
     "license": "MIT",
     "engines": {
         "vscode": "^1.79.0"
