--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,18 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
+        "module": "NodeNext",
         "target": "ES2020",
         "outDir": "out",
         "lib": [
             "ES2020",
-            "ES2021.String"
+            "ES2021.String",
+            "DOM"
         ],
         "sourceMap": true,
         "rootDir": "src",
-        "strict": true /* enable all strict type-checking options */
+        "strict": true, /* enable all strict type-checking options */
+        "skipLibCheck": true,
+        "typeRoots": ["./node_modules/@types"],
         /* Additional Checks */
         // "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
         // "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
