--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "engines": {
         "vscode": "^1.79.0"
     },
-    "activationEvents": [],
+    "activationEvents": [
+        "onStartupFinished"
+    ],
     "main": "./out/extension.js",
     "scripts": {
         "vscode:prepublish": "yarn run compile",
@@ -325,6 +327,128 @@
                 "label": "Casing convention"
             }
         ],
+        "configuration": {
+            "title": "Casing Convention",
+            "properties": {
+                "casing-convention.translation-hover.translateOnHover": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "Translate on hover"
+                },
+                "casing-convention.translation-hover.defaultTargetLanguage": {
+                    "type": "string",
+                    "enum": [
+                        "English",
+                        "Indonesian",
+                        "Afrikaans",
+                        "Albanian",
+                        "Amharic",
+                        "Arabic",
+                        "Armenian",
+                        "Azeerbaijani",
+                        "Basque",
+                        "Belarusian",
+                        "Bengali",
+                        "Bosnian",
+                        "Bulgarian",
+                        "Catalan",
+                        "Cebuano",
+                        "Chinese (Simplified)",
+                        "Chinese (Traditional)",
+                        "Corsican",
+                        "Croatian",
+                        "Czech",
+                        "Danish",
+                        "Dutch",
+                        "Esperanto",
+                        "Estonian",
+                        "Finnish",
+                        "French",
+                        "Frisian",
+                        "Galician",
+                        "Georgian",
+                        "German",
+                        "Greek",
+                        "Gujarati",
+                        "Haitian Creole",
+                        "Hausa",
+                        "Hawaiian",
+                        "Hebrew",
+                        "Hindi",
+                        "Hmong",
+                        "Hungarian",
+                        "Icelandic",
+                        "Igbo",
+                        "Irish",
+                        "Italian",
+                        "Japanese",
+                        "Javanese",
+                        "Kannada",
+                        "Kazakh",
+                        "Khmer",
+                        "Korean",
+                        "Kurdish",
+                        "Kyrgyz",
+                        "Lao",
+                        "Latin",
+                        "Latvian",
+                        "Lithuanian",
+                        "Luxembourgish",
+                        "Macedonian",
+                        "Malagasy",
+                        "Malay",
+                        "Malayalam",
+                        "Maltese",
+                        "Maori",
+                        "Marathi",
+                        "Mongolian",
+                        "Myanmar",
+                        "Nepali",
+                        "Norwegian",
+                        "Nyanja",
+                        "Pashto",
+                        "Persian",
+                        "Polish",
+                        "Portuguese",
+                        "Punjabi",
+                        "Romanian",
+                        "Russian",
+                        "Samoan",
+                        "Scots Gaelic",
+                        "Serbian",
+                        "Sesotho",
+                        "Shona",
+                        "Sindhi",
+                        "Sinhala",
+                        "Slovak",
+                        "Slovenian",
+                        "Somali",
+                        "Spanish",
+                        "Sundanese",
+                        "Swahili",
+                        "Swedish",
+                        "Tagalog",
+                        "Tajik",
+                        "Tamil",
+                        "Telugu",
+                        "Thai",
+                        "Turkish",
+                        "Ukrainian",
+                        "Urdu",
+                        "Uyghur",
+                        "Uzbek",
+                        "Vietnamese",
+                        "Welsh",
+                        "Xhosa",
+                        "Yiddish",
+                        "Yoruba",
+                        "Zulu"
+                    ],
+                    "default": "Indonesian",
+                    "description": "Select the default target language."
+                }
+            }
+        },
         "changelog": "./CHANGELOG.md"
     }
 }
