--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
         "strict": true, /* enable all strict type-checking options */
         "skipLibCheck": true,
         "typeRoots": ["./node_modules/@types"],
+        "types": ["node", "vscode", "mocha"]
         /* Additional Checks */
         // "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
         // "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
