--- a/.nycrc.json
+++ b/.nycrc.json
@@ -2,6 +2,10 @@
     "extends": "@istanbuljs/nyc-config-typescript",
     "check-coverage": true,
     "all": true,
+    "lines": 80,
+    "functions": 80,
+    "branches": 60,
+    "statements": 80,
     "include": [
         "src/**/!(*.spec.*).[tj]s?(x)"
     ],
