fix : deprecated uuidTools move to uuidUniverse

--- a/package.json
+++ b/package.json
@@ -218,7 +218,7 @@
                 "title": "casing: JSON as Type"
             },
             {
-                "command": "casing-convention.uuidTools",
+                "command": "casing-convention.uuidUniverse",
                 "title": "casing: UUID Universe"
             },
             {
